--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,9 +2,7 @@
 
 .footer {
 	max-width: 882px;
-    margin: auto;
-    margin-top: 66px;
-    margin-bottom: 60px;
+    margin: 66px auto 60px;
 }
 
 
