--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -15,6 +15,7 @@
 .profile__button:hover {
 	cursor: pointer;
 	opacity: 0.6;
+    transition: opacity 0.5s ease;
 }
 
 @media screen and (max-width: 740px) {
