--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -15,6 +15,7 @@
 .profile__edit-button:hover {
 	cursor: pointer;
 	opacity: 0.6;
+    transition: opacity 0.5s ease;
 }
 
 @media screen and (max-width: 840px) {
