--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,6 @@
 .element__image {
 	width: 100%;
-	max-height: 100%;
-	height: auto;
+	height: 282px;
 	object-fit: cover;
 	border-radius: 10px 10px 0 0;
 }
