--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,6 +4,7 @@
 @import url(./__title/element__title.css);
 
 .element {
+	position: relative;
     background-color: #FFFFFF;
     border-radius: 10px;
 }
