--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,10 +1,22 @@
 .elements {
 	max-width: 882px;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(262px, 1fr));
+	grid-template-columns: repeat(3, minmax(262px, 1fr));
     row-gap: 20px;
     column-gap: 18px;
     margin: auto;
+}
+
+@media screen and (max-width: 940px) {
+    .elements {
+        grid-template-columns: repeat(2, minmax(262px, 1fr));
+    }
+}
+
+@media screen and (max-width: 624px) {
+    .elements {
+        grid-template-columns: minmax(262px, 1fr);
+    }
 }
 
 @media screen and (max-width: 556px) {
