--- a/src/blocks/element/__button-like/element__button-like.css
+++ b/src/blocks/element/__button-like/element__button-like.css
@@ -4,13 +4,13 @@
 	background-repeat: no-repeat;
 	background-position-x: right;
     background-position-y: center;
-	min-width: 22px;
+	min-width: 23px;
     height: 22px;
-    margin-left: 22px;
     align-self: center;
     border: none;
     background-color: unset;
     outline: none;
+    margin-bottom: 3px;
 }
 
 .element__button-like:hover {
