--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,4 +1,5 @@
 @import url(./__avatar/profile__avatar.css);
+@import url(./__avatar-icon/profile__avatar-icon.css);
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__info/profile__info.css);
 @import url(./__subtitle/profile__subtitle.css);
